# unindent

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile.toml  README.md  cabin.toml  renovate.json  vcpkg.json
.github/workflows/: test.yaml
include/unindent/: unindent.hpp
tests/: CMakeLists.txt  regressions.cpp  test.cpp
